# GB-Emulator

./: CMakeLists.txt  GlobalFlags.cpp  GlobalFlags.h  main.cpp  vcpkg.json
Cartridge/: Cartridge.cpp  Cartridge.h
controller/: Emulator.cpp  Emulator.h  IControls.h  IScreen.h
hardware/: CPU.cpp  CPU.h
model/: BitManip.cpp  BitManip.h  IEmulator.h  Structs.h
model/CPU/: CPU.cpp  CPU.h  DebugLookupTable.cpp  DebugLookupTable.h  Instruction.cpp  Instruction.h  PrefixCB.cpp  TestRomSerialDebug.cpp  TestRomSerialDebug.h
model/Memory/: Bus.cpp  Bus.h  Cartridge.cpp  Cartridge.h  DMA.cpp  DMA.h  Gamepad.cpp  Gamepad.h  HRAM.cpp  HRAM.h  IO.cpp  IO.h  OamRAM.cpp  OamRAM.h  Timer.cpp  Timer.h  VRAM.cpp  VRAM.h  WRAM.cpp  WRAM.h
model/PPU/: LCD.cpp  LCD.h  PPU.cpp  PPU.h
test_roms/: 01-special.gb.txt  02-interrupts.gb.txt  03-op sp,hl.gb.txt  04-op r,imm.gb.txt  05-op rp.gb.txt  06-ld r,r.gb.txt  07-jr,jp,call,ret,rst.gb.txt  08-misc instrs.gb.txt  09-op r,r.gb.txt  10-bit ops.gb.txt  11-op a,(hl).gb.txt  cpu_instrs.gb.txt  dmg-acid2.gb.txt  mem_timing.gb.txt
utils/: DataConversion.cpp
view/: BitmapScreen.cpp  BitmapScreen.h  Controls.cpp  Controls.h  GUIWindow.cpp  GUIWindow.h
